feat: 完整的 R2 文件管理系统初始化
- 实现 11 个 API 端点：上传、删除、重命名、复制、移动、创建文件夹等
- 构建存储抽象层，支持多后端（R2、S3、GitHub）
- 添加完整的前端界面：列表/网格视图、文件操作、批量管理
- 添加深色/浅色主题支持
- 迁移至 Jinja2 模板继承架构
- 添加完整的 API 文档和项目文档
- 优化 Vercel 部署配置

--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,13 @@
 {
     "version": 2,
-    "devCommand": "python ./app.py",
     "builds": [
         {
             "src": "app.py",
-            "use": "@vercel/python",
-            "config": {
-                "pythonVersion": "3.11"
-            }
+            "use": "@vercel/python"
+        },
+        {
+            "src": "/static/**",
+            "use": "@vercel/static"
         }
     ],
     "routes": [
