--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,32 @@
+# 存储类型选择
+## Done
+# r2 | Cloudflare R2
+## TODO LIST:
+# cnbcool | Tencent cnb.cool
+# s3 | Amazon S3
+# github-repo | GitHub Repo
+STORAGE_TYPE=r2
+
+# ==================== Cloudflare R2 配置 ====================
+# R2 访问凭证
 ACCESS_KEY_ID=YOUR_R2_ACCESS_KEY_ID
 SECRET_ACCESS_KEY=YOUR_R2_SECRET_ACCESS_KEY
+
+# R2 存储桶名称
 R2_BUCKET_NAME=drive
+
+# R2 Endpoint URL
 R2_ENDPOINT_URL=https://<your-account-id>.r2.cloudflarestorage.com
+
+# R2 区域 (默认: auto)
 R2_REGION=auto
 
-REDIS_URL=redis://localhost:6379/0
-
-# 可选: 公共访问 URL
+# R2 公共访问 URL (可选，例如: https://pub-<bucket-name>.r2.dev)
 R2_PUBLIC_URL=https://pub-<bucket-name>.r2.dev
+
+# R2 预签名 URL 过期时间（秒，默认: 3600）
+R2_PRESIGN_EXPIRES=3600
+
+# ==================== 应用配置 ====================
+# 缩略图缓存时间（秒，默认: 3600）
+THUMB_TTL_SECONDS=3600
