--- a/.github/workflows/deploy-to-vercel.yml
+++ b/.github/workflows/deploy-to-vercel.yml
@@ -3,7 +3,7 @@ name: Deploy to Vercel
 on:
     push:
         branches:
-            - main
+            - docs
     workflow_dispatch: {}
 
 jobs:
