--- a/.github/workflows/deploy-to-vercel.yml
+++ b/.github/workflows/deploy-to-vercel.yml
@@ -4,7 +4,7 @@ on:
     push:
         branches:
             - docs
-    workflow_dispatch: {}
+    workflow_dispatch:
 
 jobs:
     vercel-deploy:
