feat: 添加 Microsoft Onedrive 选项，并优化 R2 访问凭证说明

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@
 ## TODO LIST:
 # cnbcool | Tencent cnb.cool
 # s3 | Amazon S3
+# Microsoft Onedrive
 STORAGE_TYPE=r2
 
 # ==================== Cloudflare R2 配置 ====================
